welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: not found: value setColorBrush
  setColorBrush(Color.RED)
  ^